<resources>
    <string name="app_name">Wallpaper and Ringtons</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="ringtones">Ringtones</string>
    <string name="live_wallpapers">Live Wallpapers</string>
    <string name="set_to_home_screen">Set to home screen</string>
    <string name="set_to_lock_screen">Set to lock screen</string>
    <string name="set_to_home_amp_lock_screen">Set to home &amp; lock screen</string>
    <string name="contacts_photo">Contacts photo</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="alarm">Alarm</string>
    <string name="notification">Notification</string>
    <string name="share">Share</string>
    <string name="favorite">Favorite</string>
    <string name="set_as">Set as</string>
    <string name="test">Take care of you</string>
    <string name="start_time">00:00</string>
    <string name="end_time">00:10</string>


</resources>